@@ -28,3 +28,10 @@ Fick marines att springa till choke
 Nya prints baserat på tasks
 
 Ny metod: Build. Enklare hantering av bygg-prylar etc etc
+
+------------------------------------------------------------
+
+17/11, Grupp
+Fixade refinery hantering typ-ish?
+Fixade text på defence-postition för marines
+
